--- a/WebContent/ShoppingCart.jspx
+++ b/WebContent/ShoppingCart.jspx
@@ -18,6 +18,55 @@
 <script type="text/javascript" src="./res/browse.js">
 	;
 </script>
+<style>
+body {
+	margin: 0;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+	overflow: hidden;
+	background-color: #333;
+}
+
+.topnav a {
+	float: left;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+
+.topnav a:hover {
+	background-color: #ddd;
+	color: black;
+}
+
+.topnav a.active {
+	background-color: #4CAF50;
+	color: white;
+}
+
+body, h1, h2, h3, h4, h5 {
+	font-family: "Poppins", sans-serif
+}
+
+body {
+	font-size: 16px;
+}
+
+.w3-half img {
+	margin-bottom: -6px;
+	margin-top: 16px;
+	opacity: 0.8;
+	cursor: pointer
+}
+
+.w3-half img:hover {
+	opacity: 1
+}
+</style>
 <title>Shopping Cart Page</title>
 
 
@@ -32,47 +81,43 @@
 			<div class="w3-container">
 				<h3 class="w3-padding-64"></h3>
 			</div>
-					<div class="w3-bar-block">
-							<a href="Start?currPage=home" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
-							<a href="Start?currPage=categories" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Categories</a> 
-							<a href="Start?currPage=cart" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Cart</a> 
-							<a href="Start?currPage=team" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Our Team</a> 
-							<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Account Management</a> 
-							<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Membership</a> 
-							<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a>
-					</div>
+			<div class="w3-bar-block">
+				<a href="Start?currPage=home" onclick="w3_close()"
+					class="w3-bar-item w3-button w3-hover-white">Home</a> <a
+					href="Start?currPage=categories" onclick="w3_close()"
+					class="w3-bar-item w3-button w3-hover-white">Categories</a> <a
+					href="Start?currPage=cart" onclick="w3_close()"
+					class="w3-bar-item w3-button w3-hover-white">Cart</a>
+				<!-- 				<a href="Start?currPage=team" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Our Team</a>  -->
+				<a href="Start?currPage=login" onclick="w3_close()"
+					class="w3-bar-item w3-button w3-hover-white">Account Management</a>
+				<!-- 				<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Membership</a>  -->
+				<!-- 				<a href="Start?currPage=login" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Contact</a> -->
+			</div>
 		</nav>
 		<table>
 
 			<div class="w3-main" style="margin-left: 340px; margin-right: 40px">
 
 				<!-- Header -->
-				<div class="w3-container" style="margin-top: 80px; color: Red;"
-					id="showcase">
-					<h1 class="w3-jumbo" style="display: inline">
-						<b>Swag EECS Bookstore</b>
-					</h1>
-				</div>
-
-				<form name='browseForm' action="Start" method="POST"
-					onsubmit="return validate();">
-					<table style="width: 100%">
-
-						<tr align="right">
-							<td><input type='text' style="margin-right: 10px"
-								name='browse' placeholder='Browse Books'></input>
-								<button action='Submit' name='createAccount'
-									label='createAccount' style="margin-top: 30px"
-									class="w3-medium w3-text-black,w3-button w3-khaki w3-round-xlarge ">
-									<font color="#701e6e"></font> Search
-								</button></td>
-						</tr>
-
-						<tr>
-							<td><p name='results'></p></td>
-						</tr>
-					</table>
-				</form>
+			<!-- Header -->
+			<div class="w3-container" style="margin-top: 80px" id="showcase">
+				<h1 class="w3-jumbo">
+					<b>Swag EECS Bookstore</b>
+				</h1>
+			</div>
+			<form name='browseForm' action="Start?currPage=search" method="POST"
+				onsubmit="Start?currPage=search">
+				<table style="width: 100%">
+					<tr align="right">
+						<td><input type='text' name='searchField' id="searchField"
+							placeholder='Browse Books'></input><input type="submit" name="Search" value="Search"></input></td> 
+					</tr>
+					<tr>
+						<td><p id='resultDisplay'></p></td>
+					</tr>
+				</table>
+			</form>
 			</div>
 
 			<div class="w3-light-grey"
@@ -172,6 +217,7 @@
 
 		</table>
 	</form>
+	
 
 	<footer>
 		<table>
